Fixed: slide overflow, disable auto carousel on mob and etc

--- a/css/common.css
+++ b/css/common.css
@@ -3,6 +3,7 @@
   --black: #000000;
   --picton-blue: #3897f0;
   --light-cyan: #e0f7fa;
+  --light-shade-gray: #bbbbbb;
   --lighter-cyan: #e7fafe;
   --light-grayish-cyan: #e7f9fd;
 
